src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTCompiledVertexArray_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTCompiledVertexArray_StringErrorContext.class */
public final class EXTCompiledVertexArray_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glLockArraysEXT(II)V", "net/labymod/core/laby3d/opengl/error/generated/EXTCompiledVertexArrayErrorContext");
        methods.put("glUnlockArraysEXT()V", "net/labymod/core/laby3d/opengl/error/generated/EXTCompiledVertexArrayErrorContext");
        return methods;
    }
}
